# SQISignHD-lib

./: .gitignore  .gitmodules  NOTICE  README.md
Signature/: NOTICE  (+2 more)
Signature/src/: CMakeLists.txt  sqisign.c
Signature/src/common/generic/: CMakeLists.txt  aes_c.c  fips202.c  mem.c  randombytes_ctrdrbg.c  randombytes_system.c  tools.c
Signature/src/common/generic/include/: bench.h  fips202.h  tools.h  tutil.h
Signature/src/dim2id2iso/ref/: CMakeLists.txt
Signature/src/dim2id2iso/ref/dim2id2isox/: dim2id2iso.c
Signature/src/dim2id2iso/ref/dim2id2isox/test/: dim2id2iso_tests.h  test_dim2id2iso.c
Signature/src/dim2id2iso/ref/include/: dim2id2iso.h
Signature/src/dim2id2iso/ref/lvl1/test/: CMakeLists.txt
Signature/src/dim2id2iso/ref/lvl5/: CMakeLists.txt
Signature/src/ec-old/ref/ecx/: basis.c  ec.c  isog_chains.c  xeval.c  xisog.c
Signature/src/ec-old/ref/ecx/test/: isog-test.c  mont-test.c  poly-mul-test.c
Signature/src/ec-old/ref/include/: curve_extras.h  ec.h  isog.h
Signature/src/ec/ref/ecx/: basis.c  biextension.c  ec.c  isog_chains.c  kps.c  tedwards.c  xeval.c  xisog.c
Signature/src/ec/ref/ecx/test/: basis-gen-test.c  biextension-test.c  test_extras.c  test_extras.h
Signature/src/ec/ref/include/: biextension.h  curve_extras.h  ec.h  isog.h  tedwards.h
Signature/src/ec/ref/lvl1/test/: CMakeLists.txt  ec.test_lvl1  fp2.test_lvl1  mont.test_lvl1  poly-mul.test_lvl1  poly-redc.test_lvl1  test-basis.h  velu.test_lvl1
Signature/src/ec/ref/lvl3/test/: test-basis.h
Signature/src/ec/ref/lvl5/: CMakeLists.txt
Signature/src/ec/ref/lvl5/test/: ec-tests.h  test-basis.h
Signature/src/gf-old/ref/lvl1/: fp.c  fp_hd256.c
Signature/src/gf-old/ref/lvl1/include/: fp2.h
Signature/src/gf/broadwell/: CMakeLists.txt
Signature/src/gf/broadwell/gfx/: fp2.c  mp.c
Signature/src/gf/broadwell/gfx/test/: test_fp.c  test_utils.c  test_utils.h
Signature/src/gf/broadwell/include/: fp2.h
Signature/src/gf/broadwell/lvl1/: CMakeLists.txt  fp.c  fp2.c  gf5248.c
Signature/src/gf/broadwell/lvl1/include/: fp.h  gf5248.h
Signature/src/gf/broadwell/lvl3/: CMakeLists.txt  fp.c  gf65376.c
Signature/src/gf/broadwell/lvl3/include/: fp.h  gf65376.h
Signature/src/gf/broadwell/lvl3/test/: CMakeLists.txt
Signature/src/gf/broadwell/lvl5/: CMakeLists.txt  fp.c  gf27500.c
Signature/src/gf/broadwell/lvl5/include/: fp.h  gf27500.h
Signature/src/gf/ref/gfx/: fp.c  fp2.c
Signature/src/gf/ref/gfx/test/: sha3.c  sha3.h  test_fp.c  test_fp2.c  test_utils.c
Signature/src/gf/ref/include/: fp.h  fp2.h  mp.h
Signature/src/gf/ref/lvl1/: CMakeLists.txt  fp2.c  fp_p5248.c
Signature/src/gf/ref/lvl1/test/: sqisign_test_gf_lvl1_fp  sqisign_test_gf_lvl1_fp2
Signature/src/gf/ref/lvl3/: CMakeLists.txt  fp_p65376.c
Signature/src/gf/ref/lvl5/: CMakeLists.txt  fp_p27500.c
Signature/src/gf/ref/lvl5/test/: CMakeLists.txt
Signature/src/hd/ref/: CMakeLists.txt
Signature/src/hd/ref/hdx/: hd.c  theta_isogenies.c  theta_isogenies.h  theta_structure.c  theta_structure.h
Signature/src/hd/ref/hdx/test/: hd_test.c  hd_test.h  test_extras.h
Signature/src/hd/ref/include/: hd.h
Signature/src/hd/ref/lvl1/: CMakeLists.txt
Signature/src/hd/ref/lvl3/: CMakeLists.txt
Signature/src/hd/ref/lvl5/: CMakeLists.txt
Signature/src/hd/ref/lvl5/test/: CMakeLists.txt
Signature/src/id2iso/ref/id2isox/: id2iso.c
Signature/src/id2iso/ref/id2isox/test/: id2iso_tests.h  id2ker_even.c  id2ker_odd.c  ker2id.c  test_id2iso.c
Signature/src/id2iso/ref/include/: id2iso.h
Signature/src/id2iso/ref/lvl3/: CMakeLists.txt
Signature/src/id2iso/ref/lvl3/test/: CMakeLists.txt
Signature/src/intbig/ref/generic/: intbig.c
Signature/src/intbig/ref/generic/include/: intbig.h
Signature/src/intbig/ref/generic/test/: sqisign_test_intbig  test_intbig.c
Signature/src/klpt/ref/include/: klpt.h
Signature/src/klpt/ref/klptx/: tools.c  tools.h
Signature/src/klpt/ref/klptx/test/: klpt_tests.h  test_klpt.c  tools.c
Signature/src/klpt/ref/lvl1/test/: sqisign_test_klpt_LVL1
Signature/src/klpt/ref/lvl5/: CMakeLists.txt
Signature/src/klpt/ref/lvl5/test/: CMakeLists.txt
Signature/src/precomp/ref/lvl1/: CMakeLists.txt  ec_params.py  endomorphism_action.c  gf_constants.c  quaternion_data.c  sqisign_parameters.txt  torsion_constants.c
Signature/src/precomp/ref/lvl1/include/: ec_params.h  ec_params_backup.h  ec_params_old.h  encoded_sizes.h  klpt_constants.h  torsion_constants.h
Signature/src/precomp/ref/lvl3/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  quaternion_data.c  sqisign_parameters.txt  torsion_constants.c
Signature/src/precomp/ref/lvl3/include/: ec_params.h  encoded_sizes.h  endomorphism_action.h  gf_constants.h  klpt_constants.h  torsion_constants.h
Signature/src/precomp/ref/lvl5/: endomorphism_action.c  gf_constants.c  quaternion_data.c  sqisign_parameters.txt  torsion_constants.c
Signature/src/precomp/ref/lvl5/include/: ec_params.h  encoded_sizes.h  fp_constants.h  klpt_constants.h  torsion_constants.h
Signature/src/quaternion/ref/generic/: CMakeLists.txt  algebra.c  dim2.c  dim4.c  finit.c  ideal.c  integers.c  internal.h  lattice.c  lll.c  matkermod.c  printer.c
Signature/src/quaternion/ref/generic/include/: quaternion.h
Signature/src/sqisigndim2/ref/: CMakeLists.txt
Signature/src/sqisigndim2/ref/include/: sqisigndim2.h
Signature/src/sqisigndim2/ref/lvl1/: CMakeLists.txt
Signature/src/sqisigndim2/ref/sqisigndim2x/: keygen.c  sign.c
Signature/src/sqisigndim2_heuristic/ref/: CMakeLists.txt
Signature/src/sqisigndim2_heuristic/ref/include/: sqisigndim2_heuristic.h
Signature/src/sqisigndim2_heuristic/ref/lvl1/: CMakeLists.txt
Signature/src/sqisigndim2_heuristic/ref/sqisigndim2_heuristicx/: keygen.c  sign.c
Signature/src/sqisignhd/ref/: CMakeLists.txt
Signature/src/sqisignhd/ref/include/: sqisignhd.h  toolbox.h
Signature/src/sqisignhd/ref/lvl1/: CMakeLists.txt
Signature/src/sqisignhd/ref/lvl3/: CMakeLists.txt
Signature/src/sqisignhd/ref/lvl5/: CMakeLists.txt
Signature/src/sqisignhd/ref/sqisignhdx/: doublepath.c  keygen.c  sign.c  toolbox.c
(+206 files in other folders)
