
set(SOURCE_FILES_DIM2ID2ISO_GENERIC_REF
    ${DIM2ID2ISOX_DIR}/dim2id2iso.c
)

add_library(${LIB_DIM2ID2ISO_${SVARIANT_UPPER}} ${SOURCE_FILES_DIM2ID2ISO_GENERIC_REF})
target_include_directories(${LIB_DIM2ID2ISO_${SVARIANT_UPPER}} PRIVATE common ${INC_PUBLIC} ${INC_INTBIG} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_QUATERNION} ${INC_KLPT} ${INC_GF} ${INC_GF_${SVARIANT_UPPER}} ${INC_EC} ${INC_HD} ${INC_ID2ISO} ${INC_DIM2ID2ISO} ${INC_COMMON} ${INC_GF} ${INC_GF_${SVARIANT_UPPER}})
target_link_libraries(${LIB_DIM2ID2ISO_${SVARIANT_UPPER}} ${LIB_ID2ISO_${SVARIANT_UPPER}} ${LIB_KLPT_${SVARIANT_UPPER}} ${LIB_EC_${SVARIANT_UPPER}} ${LIB_HD_${SVARIANT_UPPER}})
target_compile_options(${LIB_DIM2ID2ISO_${SVARIANT_UPPER}} PRIVATE ${C_OPT_FLAGS})

add_subdirectory(test)
