
set(SOURCE_FILES_SQISIGNDIM2_HEURISTIC_GENERIC_REF
    ${SQISIGNDIM2_HEURISTICX_DIR}/sign.c
    ${SQISIGNDIM2_HEURISTICX_DIR}/keygen.c
)

add_library(${LIB_SQISIGNDIM2_HEURISTIC_${SVARIANT_UPPER}} ${SOURCE_FILES_SQISIGNDIM2_HEURISTIC_GENERIC_REF})
target_include_directories(${LIB_SQISIGNDIM2_HEURISTIC_${SVARIANT_UPPER}} PRIVATE common ${INC_PUBLIC} ${INC_INTBIG} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_QUATERNION} ${INC_KLPT} ${INC_GF} ${INC_GF_${SVARIANT_UPPER}} ${INC_EC} ${INC_ID2ISO} ${INC_HD} ${INC_DIM2ID2ISO} ${INC_SQISIGNDIM2_HEURISTIC} ${INC_COMMON})
target_link_libraries(${LIB_SQISIGNDIM2_HEURISTIC_${SVARIANT_UPPER}} ${LIB_ID2ISO_${SVARIANT_UPPER}} ${LIB_DIM2ID2ISO_${SVARIANT_UPPER}})
target_compile_options(${LIB_SQISIGNDIM2_HEURISTIC_${SVARIANT_UPPER}} PRIVATE ${C_OPT_FLAGS})

add_subdirectory(test)
