
set(SOURCE_FILES_SQISIGNHD_GENERIC_REF
    ${SQISIGNHDX_DIR}/sign.c
    ${SQISIGNHDX_DIR}/keygen.c
)

add_library(${LIB_SQISIGNHD_${SVARIANT_UPPER}} ${SOURCE_FILES_SQISIGNHD_GENERIC_REF})
target_include_directories(${LIB_SQISIGNHD_${SVARIANT_UPPER}} PRIVATE common ${INC_PUBLIC} ${INC_INTBIG} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_QUATERNION} ${INC_KLPT} ${INC_GF} ${INC_GF_${SVARIANT_UPPER}} ${INC_EC} ${INC_ID2ISO} ${INC_DIM2ID2ISO} ${INC_HD} ${INC_SQISIGNHD} ${INC_COMMON})
target_link_libraries(${LIB_SQISIGNHD_${SVARIANT_UPPER}} ${LIB_ID2ISO_${SVARIANT_UPPER}} ${LIB_DIM2ID2ISO_${SVARIANT_UPPER}})
target_compile_options(${LIB_SQISIGNHD_${SVARIANT_UPPER}} PRIVATE ${C_OPT_FLAGS})

add_subdirectory(test)
